--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,7 +1,9 @@
 <ion-view title="Home">
     <ion-content>
-        <div class="list">
-           test
-        </div>
+       <ul>
+       		<li ng-repeat="producto in productos">
+       			{{ producto.nombre }}
+       		</li>
+       </ul>
     </ion-content>
 </ion-view>
