vistas de productos y home

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,9 +1,8 @@
 <ion-view title="Home">
     <ion-content>
        <ul>
-       		<li ng-repeat="producto in productos">
-       			{{ producto.nombre }}
-       		</li>
+       	  <div class="home">
+       	  </div>
        </ul>
     </ion-content>
 </ion-view>
