--- a/www/templates/products.html
+++ b/www/templates/products.html
@@ -1,5 +1,7 @@
 <ion-view title="Products">
     <ion-content>
+     <div class="superior-productos">
+     </div>
        <ul>
        		<li ng-repeat="producto in productos">
        			{{ producto.nombre }}
