Plantillas para iconos y splash screen

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,11 +1,18 @@
 /* Empty. Add your own CSS if you like */
-.home{
-	
+/*.home
+{
 	 background-image: url("../img/home-02.png");
      background-position: center top;
      background-size: 100% 320px;
      background-repeat: no-repeat;
      background-color: #FFF;
      height: 350px;
+}*/
 
+.home 
+{
+	position: absolute;
+	height: 100%;
+	width: 100%;
 }
+
