encabezado estilos basicos

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,3 +9,25 @@
      height: 350px;
 
 }
+
+.home-icon{
+
+
+float: left;
+width:10%;
+
+}
+
+.text-encabezado-productos{
+
+float: left;
+width: 60%;
+text-align: center;
+
+}
+
+
+.superior-productos{
+
+
+}
