estilos encabezado productos

--- a/www/templates/products.html
+++ b/www/templates/products.html
@@ -1,7 +1,7 @@
 <ion-view title="Products">
     <ion-content>
      <div class="superior-productos">
-	     <img class="home-icon" src="img/epd-icon.png">
+	     <img class="home-icon-1" src="img/epd-icon.png">
 	     <h4>Nutricion inteligente</h4>
 	     <img class="home-icon" src="img/bac-icon.png">
 	     <img class="home-icon" src="img/home-icon.png">
