--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,14 +7,32 @@
      background-repeat: no-repeat;
      background-color: #FFF;
      height: 350px;
+}
 
+
+.superior-productos h4{
+
+	width: 70%;
+	float: left;
+	text-align: center;
+	color: #0032AB;
 }
 
 .home-icon{
+    margin-top: 14px;
+    float: left;
+    width: 28px;
+    height: 27px;
 
+}
 
+.home-icon-1{
+
+margin-top: 5px;
 float: left;
-width:10%;
+width: 50px;
+height: 38px;
+margin-left: 12px;
 
 }
 
@@ -27,7 +45,13 @@ text-align: center;
 }
 
 
+
 .superior-productos{
 
+
+border-bottom-color: #FFDA00;
+border-bottom-width: 3px;
+border-bottom-style: solid;
+height: 49px;
 
 }
