--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,29 +11,28 @@
 
 
 .superior-productos h4{
-
-	width: 70%;
+   margin-top: 18px;
+	width: 65%;
 	float: left;
 	text-align: center;
 	color: #0032AB;
+	font-size: 13px;
 }
 
 .home-icon{
-    margin-top: 14px;
+       margin-top: 20px;
     float: left;
-    width: 28px;
-    height: 27px;
+    width: 23px;
+    height: 20px;
 
 }
 
 .home-icon-1{
-
-margin-top: 5px;
-float: left;
-width: 50px;
-height: 38px;
-margin-left: 12px;
-
+    margin-top: 5px;
+    float: left;
+    width: 44px;
+    height: 34px;
+    margin-left: 12px;
 }
 
 .text-encabezado-productos{
