--- a/www/templates/productos.html
+++ b/www/templates/productos.html
@@ -1,11 +1,11 @@
 <ion-view title="Productos">
     <ion-content>
-    <div class="superior-productos">
-    </div>
-	<slick dots=true infinite=false speed=300 slides-to-show=1 touch-move=false slides-to-scroll=1>
-		<div ng-repeat="producto in productos">
-			<a href="#/productos/{{ producto.id }}">{{ producto.nombre }}</a>
-		</div>
-	</slick>
+     <div class="superior-productos">
+     </div>
+		<slick init-onload=true dots=true infinite=false speed=300 slides-to-show=1 touch-move=false slides-to-scroll=1 data="productos">
+			<div ng-repeat="producto in productos">
+				<a href="#/productos/{{ producto.id }}">{{ producto.nombre }}</a>
+			</div>
+		</slick>
     </ion-content>
 </ion-view>
