--- a/www/templates/detalles.html
+++ b/www/templates/detalles.html
@@ -7,5 +7,6 @@
 	     <img class="home-icon" src="img/home-icon.png">
      	</div>
 		{{ producto.nombre }}
+		<img href="#/productos/{{ producto.id }}" class="productos-imagen-home" src="{{producto.imagen}}">
     </ion-content>
 </ion-view>
