--- a/www/templates/productos.html
+++ b/www/templates/productos.html
@@ -8,7 +8,7 @@
     </div>
 		<slick init-onload=true dots=true infinite=false speed=300 slides-to-show=1 touch-move=false slides-to-scroll=1 data="productos">
 			<div ng-repeat="producto in productos">
-				<a href="#/productos/{{ producto.id }}">{{ producto.nombre }}</a>
+				<img href="#/productos/{{ producto.id }}" class="productos-imagen-home" src="{{producto.imagen}}">
 			</div>
 		</slick>
     <div class="producto-msg-title">
