--- a/www/templates/detalles.html
+++ b/www/templates/detalles.html
@@ -6,7 +6,15 @@
 	     <img class="home-icon" src="img/bac-icon.png">
 	     <img class="home-icon" src="img/home-icon.png">
      	</div>
-		{{ producto.nombre }}
-		<img href="#/productos/{{ producto.id }}" class="productos-imagen-home" src="{{producto.imagen}}">
+     	<div class="producto-msg-title">
+			{{ producto.nombre }}
+    	</div>
+    	<div class="franja-azul">
+	    </div>
+	    <div class="franja-amarilla">
+	    </div>
+	    <div class="detalles-imagen">
+			<img  class="productos-imagen-home" src="{{producto.imagen}}">
+		</div>
     </ion-content>
 </ion-view>
