--- a/www/templates/productos.html
+++ b/www/templates/productos.html
@@ -6,13 +6,17 @@
 	     <img class="home-icon" src="img/bac-icon.png">
 	     <img class="home-icon" src="img/home-icon.png">
     </div>
-		<slick init-onload=true dots=true infinite=false speed=300 slides-to-show=1 touch-move=false slides-to-scroll=1 data="productos">
-			<div ng-repeat="producto in productos">
-				<img href="#/productos/{{ producto.id }}" class="productos-imagen-home" src="{{producto.imagen}}">
-			</div>
-		</slick>
-    <div class="producto-msg-title">
+     <div class="producto-msg-title">
     Seleccione el producto que desea formular o prescribir
     </div>
+    <div class="franja-azul">
+    </div>
+    <div class="franja-amarilla">
+    </div>
+	<slick init-onload=true dots=true infinite=false speed=300 slides-to-show=1 touch-move=false slides-to-scroll=1 data="productos">
+		<div ng-repeat="producto in productos">
+			<a href="#/productos/{{ producto.id }}" ><img class="productos-imagen-home" src="{{producto.imagen}}"></a>
+		</div>
+	</slick>
     </ion-content>
 </ion-view>
