--- a/www/templates/detalles.html
+++ b/www/templates/detalles.html
@@ -3,8 +3,8 @@
 		<div class="superior-productos">
 	     <img class="home-icon-1" src="img/epd-icon.png">
 	     <h4>Nutricion inteligente</h4>
-	     <img class="home-icon" src="img/bac-icon.png">
-	     <img class="home-icon" src="img/home-icon.png">
+	     <a href="#/productos"><img class="home-icon" src="img/bac-icon.png"></a>
+	     <a href="#"><img class="home-icon" src="img/home-icon.png"></a>
      	</div>
      	<div class="producto-msg-title">
 			{{ producto.nombre }}
