--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,6 +1,14 @@
 <ion-view title="Home">
 	<ion-content>
-		<div class="home">
+		<div class="franja-azul-home">
+	    </div>
+	    <div class="franja-amarilla-home">
+	    </div>
+	    <div class="detalles-imagen">
+			<img class="img-home" src="/img/home.png">
+		</div>
+		 <div class="detalles-imagen">
+			<img class="img-home-inf" src="/img/epd-icon.png">
 		</div>
 	</ion-content>
 </ion-view>
