--- a/www/templates/productos.html
+++ b/www/templates/productos.html
@@ -1,21 +1,21 @@
 <ion-view title="Productos">
     <ion-content>
     <div class="superior-productos">
-	     <img class="home-icon-1" src="img/epd-icon.png">
-	     <h4>Nutricion inteligente</h4>
-	    <a href="#/productos"><img class="home-icon" src="img/bac-icon.png"></a>
-         <a href="#"><img class="home-icon" src="img/home-icon.png"></a>
+	    <img class="home-icon-1" src="img/epd-icon.png">
+	    <h4>Nutricion inteligente</h4>
+        <a href="#/productos"><img class="home-icon" src="img/bac-icon.png"></a>
+        <a href="#"><img class="home-icon" src="img/home-icon.png"></a>
     </div>
-     <div class="producto-msg-title">
-    Seleccione el producto que desea formular o prescribir
+    <div class="producto-msg-title">
+        Seleccione el producto que desea formular o prescribir
     </div>
     <div class="franja-azul">
     </div>
     <div class="franja-amarilla">
     </div>
-	<slick init-onload=true dots=true infinite=false speed=300 slides-to-show=1 touch-move=false slides-to-scroll=1 data="productos">
+	<slick init-onload=true dots=false arrows=true infinite=false speed=300 slides-to-show=1 touch-move=false slides-to-scroll=1 data="productos">
 		<div ng-repeat="producto in productos">
-			<a href="#/productos/{{ producto.id }}" ><img class="productos-imagen-home" src="{{producto.imagen}}"></a>
+			<a href="#/productos/{{ producto.id }}"><img class="productos-imagen-home" src="{{producto.imagen}}"></a>
 		</div>
 	</slick>
     </ion-content>
