--- a/www/css/style.css
+++ b/www/css/style.css
@@ -51,7 +51,7 @@
     height: 32px;
     width: 100%;
     background-color: rgba(0,50,171,0.7);
-    top: 233px;
+    top: 40%;
 }
 
 .franja-amarilla {
@@ -60,7 +60,7 @@
     height: 32px;
     width: 100%;
     background-color: rgba(255,218,0,0.7);
-    top: 293px;
+    top: 50%;
 }
 .productos-imagen-home {
 width: 69%;
@@ -122,8 +122,32 @@ padding: 5px 5px 5px 5px;
 
 }
 
+.slider-productos {
+    position: relative;
+}
+
+.slider-productos:before {
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 0%;
+    width: 100%;
+    height: 10%;
+    background-color: rgba(0,50,171,0.7);
+}
+
+.slider-productos:after {
+    content: '';
+    position: absolute;
+    top: 60%;
+    left: 0%;
+    width: 100%;
+    height: 10%;
+    background-color: rgba(255,218,0,0.7);
+}
+
 .slick-prev, .slick-next {
-    top: 44%;
+    top: 50%;
 }
 
 .slick-next {
@@ -136,4 +160,8 @@ padding: 5px 5px 5px 5px;
 
 .slick-prev:before, .slick-next:before {
     color: #0a0a0a;
+}
+
+.slick-slider {
+    z-index: 100;
 }
