links home superior

--- a/www/templates/detalles.html
+++ b/www/templates/detalles.html
@@ -1,10 +1,10 @@
 <ion-view title="Detalles">
     <ion-content>
 		<div class="superior-productos">
-			<img class="home-icon-1" src="img/epd-icon.png">
-			<h4>Nutricion inteligente</h4>
-			<a href="#/productos"><img class="home-icon" src="img/bac-icon.png"></a>
-			<a href="#"><img class="home-icon" src="img/home-icon.png"></a>
+	     <img class="home-icon-1" src="img/epd-icon.png">
+	     <h4>Nutricion inteligente</h4>
+	     <a href="#/productos" class="home-superior-a"><img class="home-icon" src="img/bac-icon.png"></a>
+	     <a href="#" class="home-superior-a"><img class="home-icon" src="img/home-icon.png"></a>
      	</div>
      	<div class="producto-msg-title">
 			{{ producto.nombre }}
