--- a/www/css/style.css
+++ b/www/css/style.css
@@ -76,9 +76,13 @@
     position: absolute;
 }
 .home-icon {
-    margin-top: 20px;
+   
     width: 23px;
     height: 20px;
+    
+}
+.home-superior-a{
+    margin-top: 20px;
     float: right;
     margin: 15px 7px 0 0;
 }
