vista detalles estilos fix

--- a/www/templates/detalles.html
+++ b/www/templates/detalles.html
@@ -9,12 +9,10 @@
      	<div class="producto-msg-title">
 			{{ producto.nombre }}
     	</div>
-    	<div class="franja-azul">
-	    </div>
-	    <div class="franja-amarilla">
-	    </div>
-	    <div class="detalles-imagen">
-			<img  class="productos-imagen-home" src="{{producto.imagen}}">
+    	<div class="slider-productos">
+		    <div class="detalles-imagen">
+				<img  class="productos-imagen-home" src="{{producto.imagen}}">
+			</div>
 		</div>
     </ion-content>
 </ion-view>
