--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,6 +21,8 @@
     width: 100%;
 }
 
+
+
 .img-home-inf{
 
     width: 50px;
@@ -137,6 +139,7 @@ padding: 5px 5px 5px 5px;
     width: 100%;
     height: 10%;
     background-color: rgba(0,50,171,0.7);
+    z-index: -1;
 }
 
 .slider-productos:after {
@@ -147,6 +150,7 @@ padding: 5px 5px 5px 5px;
     width: 100%;
     height: 10%;
     background-color: rgba(255,218,0,0.7);
+    z-index: -1;
 }
 
 .slick-prev, .slick-next {
