Selector con estilos de diseño

--- a/www/templates/detalles.html
+++ b/www/templates/detalles.html
@@ -16,5 +16,12 @@
 	    <div class="detalles-imagen">
 			<img  class="productos-imagen-home" src="{{producto.imagen}}">
 		</div>
+        <div class="form-container">
+            <select name="" id="" class="select-blue">
+                <option value="">opcion 1</option>
+                <option value="">opcion 2</option>
+                <option value="">opcion 3</option>
+            </select>
+        </div>
     </ion-content>
 </ion-view>
