--- a/www/css/style.css
+++ b/www/css/style.css
@@ -165,3 +165,30 @@ padding: 5px 5px 5px 5px;
 .slick-slider {
     z-index: 100;
 }
+
+.select-blue {
+    -webkit-appearance: button;
+    -webkit-user-select: none;
+    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+    -webkit-padding-end: 20px;
+    -webkit-border-radius: 15px;
+    -webkit-padding-start: 2px;
+    border: 1px solid #fff;
+    color: #fff;
+    font-size: inherit;
+    overflow: hidden;
+    padding: 5px 40px 5px 10px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    border-radius: 15px;
+    background-image: url(../img/select-arrow.png), -webkit-linear-gradient(#07B1D8, #07B1D8 40%, #07B1D8);
+    background-image: url(../img/select-arrow.png), -o-linear-gradient(#07B1D8, #07B1D8 40%, #07B1D8);
+    background-image: url(../img/select-arrow.png), linear-gradient(#07B1D8, #07B1D8 40%, #07B1D8);
+    background-position: 95% center;
+    background-repeat: no-repeat;
+    width: 90%;
+}   
+
+div.form-container {
+    margin: 9%;
+}
