--- a/www/templates/detalles.html
+++ b/www/templates/detalles.html
@@ -47,7 +47,7 @@
             <div>
                 <br>
             </div>
-            <button ng-click="verplan()">Continuar</button>
+            <button class="boton-detalles" ng-click="verplan()">Continuar</button>
         </div>
     </ion-content>
 </ion-view>
