--- a/www/css/style.css
+++ b/www/css/style.css
@@ -106,6 +106,7 @@ margin-bottom: 40px;
     margin-top: 20px;
     float: right;
     margin: 15px 7px 0 0;
+    position: relative;
 }
 .home-icon-1{
     margin-top: 5px;
