--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,14 +9,25 @@
      height: 350px;
 }
 
-.boton-detalles{
-border-radius: 50px;
-border-width: 0px;
-background-color: #53c2e3;
-color: white;
-padding: 7px;
-width: 116px;
-margin-bottom: 40px;
+.boton-detalles {
+    -webkit-appearance: button;
+    -webkit-user-select: none;
+    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+    -webkit-padding-end: 20px;
+    -webkit-border-radius: 15px;
+    -webkit-padding-start: 2px;
+    border: 1px solid #fff;
+    color: #fff;
+    font-size: inherit;
+    overflow: hidden;
+    padding: 5px 40px 5px 10px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    border-radius: 15px;
+    background-color: #07b1d8;
+    background-position: 98% center;
+    background-repeat: no-repeat;
+    width: 100%;
 }
 
 
