--- a/www/templates/plan.html
+++ b/www/templates/plan.html
@@ -16,10 +16,10 @@
 			</div>
 		</div>
 		<div>
-			
-			<ul class="detalles-ul">
-				<li ng-repeat="disponibilidad in presentacion.disponibilidad">{{ disponibilidad.eps+" "+disponibilidad.codigo }}</li>
-			</ul>
+				<select ng-model="plan.numero_meses" class="select-blue">
+                <option value="" disabled selected>Selecione una eps </option>
+                <option ng-repeat="disponibilidad in presentacion.disponibilidad">{{ disponibilidad.eps+" "+disponibilidad.codigo }}</option>	
+            	</select>
 		</div>
     </ion-content>
 </ion-view>
