--- a/www/css/style.css
+++ b/www/css/style.css
@@ -86,6 +86,54 @@
     top: 40%;
 }
 
+.box1 {
+    color: white;
+    width: 35%;
+    float: left;
+    text-align: center;
+    padding: 5% 0px 5%;
+    border-right: white solid 1px;
+    height: 136px;
+    margin-bottom: 8%;
+}
+.box1 h1 {
+    color: white;
+    margin: 0px;
+    padding: 0px;
+}
+.eps-text{
+    font-size: 13px;
+    margin: 0px !important;
+    padding: 16px !important;
+    text-align: left;
+    float: left;
+    font-family: arial;
+    font-style: italic;
+}
+.codigo-text{
+    float: left;
+    text-align: center;
+    width: 100%;
+    font-size: 16px;
+    margin-top: 22px;
+    height: auto;
+}
+.datos{
+    background-color: #07b1d8;
+    width: 100%;
+    height: 146px;
+    border-radius: 18px;
+    border-color: white;
+    border-style: solid;
+}
+.box2 {
+    width: auto;
+    float: left;
+    color: white;
+    height: 50%;
+    margin: 10% 10% 0% 10px;
+}
+
 .franja-amarilla {
     position: absolute;
     z-index: -2;
@@ -96,6 +144,11 @@
 }
 .productos-imagen-home {
     width: 69%;
+    margin: 0px auto;
+}
+
+.productos-imagen-detalles {
+    width: 40%;
     margin: 0px auto;
 }
 .superior-productos h4{
