--- a/www/templates/plan.html
+++ b/www/templates/plan.html
@@ -22,7 +22,7 @@
 					<p>Latas del tratamiento</p>
 				</div>
 				<div class="box2">
-				    <p>Número de tomas al dia: <stron>{{plan.numero_tomas_dia}}</strong></p>
+				    <p>Número de tomas al dia: <strong>{{plan.numero_tomas_dia}}</strong></p>
 				    <p>Número de meses: <strong>{{plan.numero_meses}}</strong></p>
 				    <p>Presentación: <strong>{{presentacion.detalle}}</strong></p>
 				</div>
