--- a/www/css/style.css
+++ b/www/css/style.css
@@ -104,7 +104,7 @@
 .eps-text{
     font-size: 13px;
     margin: 0px !important;
-    padding: 16px !important;
+    padding: 5px !important;
     text-align: left;
     float: left;
     font-family: arial;
@@ -127,11 +127,12 @@
     border-style: solid;
 }
 .box2 {
-    width: auto;
+    width: 65%;
     float: left;
     color: white;
     height: 50%;
-    margin: 10% 10% 0% 10px;
+    padding-left: 7px;
+    padding-top: 10%;
 }
 
 .franja-amarilla {
@@ -152,7 +153,7 @@
     margin: 0px auto;
 }
 .superior-productos h4{
-    margin-top: 18px;
+    margin-top: 59px;
     width: 100%;
     float: left;
     text-align: center;
@@ -173,10 +174,9 @@
     position: relative;
 }
 .home-icon-1{
-    margin-top: 5px;
+   margin-top: 5px;
     float: left;
-    width: 44px;
-    height: 34px;
+    width: 87px;
     margin-left: 12px;
 }
 
@@ -192,10 +192,10 @@ text-align: center;
 
 .superior-productos{
 
-border-bottom-color: #FFDA00;
-border-bottom-width: 3px;
+border-bottom-color: #b6af29;
+border-bottom-width: 1px;
 border-bottom-style: solid;
-height: 49px;
+height: 57px;
 
 }
 
@@ -226,15 +226,22 @@ padding: 5px 5px 5px 5px;
     z-index: -1;
 }
 
-.slider-productos:after {
+.slider-productos::after {
     content: '';
     position: absolute;
     top: 60%;
     left: 0%;
     width: 100%;
     height: 10%;
-    background-color: rgba(255,218,0,0.7);
     z-index: -1;
+    background: rgba(241,231,103,1);
+    background: -moz-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(241,231,103,1)), color-stop(100%, rgba(254,182,69,1)));
+    background: -webkit-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+    background: -o-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+    background: -ms-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+    background: linear-gradient(to right, rgb(209, 194, 3) 0%, rgb(174, 172, 12) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f1e767', endColorstr='#feb645', GradientType=1 );
 }
 
 .slick-prev, .slick-next {
