Calculo de latas beta

--- a/www/templates/plan.html
+++ b/www/templates/plan.html
@@ -18,7 +18,7 @@
 			<div class="datos">
 				<div class="box1"> 
 					<p>Total</p>
-					<h1>62</h1>
+					<h1>{{latas}}</h1>
 					<p>Latas del tratamiento</p>
 				</div>
 				<div class="box2">
