--- a/www/css/style.css
+++ b/www/css/style.css
@@ -153,7 +153,7 @@
     margin: 0px auto;
 }
 .superior-productos h4{
-    margin-top: 59px;
+    margin-top: 11%;
     width: 100%;
     float: left;
     text-align: center;
@@ -182,9 +182,9 @@
 
 .text-encabezado-productos{
 
-float: left;
-width: 60%;
-text-align: center;
+    float: left;
+    width: 60%;
+    text-align: center;
 
 }
 
@@ -192,10 +192,10 @@ text-align: center;
 
 .superior-productos{
 
-border-bottom-color: #b6af29;
-border-bottom-width: 1px;
-border-bottom-style: solid;
-height: 57px;
+    /*border-bottom-color: #b6af29;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;*/
+    height: 57px;
 
 }
 
@@ -289,4 +289,11 @@ padding: 5px 5px 5px 5px;
 
 div.form-container {
     margin: 9%;
+}
+
+.pane {
+    background-image: url("../img/header.png");
+    background-position: center top;
+    background-size: 100% 15%;
+    background-repeat: no-repeat;
 }
