nuevo splash iconos

--- a/www/templates/productos.html
+++ b/www/templates/productos.html
@@ -2,7 +2,7 @@
     <ion-content>
     <div class="superior-productos">
 	    <img class="home-icon-1" src="img/epd-icon.png">
-	    <h4>Nutricion inteligente</h4>
+	    <h4>Nutricion avanzada</h4>
          <a href="#" class="home-superior-a"><img class="home-icon" src="img/bac-icon.png"></a>
          <a href="#" class="home-superior-a"><img class="home-icon" src="img/home-icon.png"></a>
     </div>
