--- a/www/templates/detalles.html
+++ b/www/templates/detalles.html
@@ -2,7 +2,7 @@
     <ion-content>
 	    <div class="superior-productos">
 	       <img class="home-icon-1" src="img/epd-icon.png">
-	       <h4>Nutricion inteligente</h4>
+	       <h4>Nutricion avanzada</h4>
 	       <a ng-href="#/productos" class="home-superior-a" target="_self"><img class="home-icon" src="img/bac-icon.png"></a>
 	       <a ng-href="#" class="home-superior-a"><img class="home-icon" src="img/home-icon.png"></a>
         </div>
