--- a/www/templates/plan.html
+++ b/www/templates/plan.html
@@ -2,10 +2,10 @@
     <ion-content>
 	    <div class="superior-productos">
 		    <img class="home-icon-1" src="img/epd-icon.png">
-		    <h4>Nutricion avanzada</h4>
 	         <a ng-href="#/productos" class="home-superior-a" target="_self"><img class="home-icon" src="img/bac-icon.png"></a>
 	         <a ng-href="#" class="home-superior-a"><img class="home-icon" src="img/home-icon.png"></a>
 	    </div>
+	    <h4 class="nutricion_h4">Nutrición Avanzada</h4>
 	    <div class="producto-msg-title">
 			{{ producto.nombre }}
 		</div>
