--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,7 +8,41 @@
      background-color: #FFF;
      height: 350px;
 }
+.invima{
+    font-size: 11px;
+    text-align: center;
+    color: grey;
+    position: absolute;
+    top: 77%;
+    font-weight: bold;
+        padding-left: 1%;
 
+}
+
+.div_textarea {
+  position: absolute;
+  left: 5px; 
+  top: 5px;
+  right: 5px; 
+  bottom: 5px;
+  border: 1px solid #CCC; /* style like textarea */
+}
+
+.preparacion {
+      font-size: 11px;
+    color: grey;
+  text-align: justify;
+  font-weight: bold;
+  width: 100%;
+  height: 100%;
+  margin: 0; /* don't want to add to container size */
+  border: 0; /* don't want to add to container size */
+}
+.nutricion_h4{
+    text-align: center;
+    color: #59597d;
+    font-size: 16px;
+}
 .boton-detalles {
     -webkit-appearance: button;
     -webkit-user-select: none;
@@ -158,8 +192,9 @@
     float: left;
     text-align: center;
     color: #0032AB;
-    font-size: 13px;
+    font-size: 16px;
     position: absolute;
+    top: 63px;
 }
 .home-icon {
    
@@ -176,7 +211,7 @@
 .home-icon-1{
    margin-top: 5px;
     float: left;
-    width: 87px;
+    width: 112px;
     margin-left: 12px;
 }
 
@@ -195,7 +230,7 @@
     /*border-bottom-color: #b6af29;
     border-bottom-width: 1px;
     border-bottom-style: solid;*/
-    height: 77px;
+    height: 99px;
     background-image: url("../img/header.png");
     background-position: center top;
     background-size: 100% 104%;
