--- a/www/templates/detalles.html
+++ b/www/templates/detalles.html
@@ -2,21 +2,25 @@
     <ion-content>
 	    <div class="superior-productos">
 	       <img class="home-icon-1" src="img/epd-icon.png">
-	       <h4>Nutricion avanzada</h4>
 	       <a ng-href="#/productos" class="home-superior-a" target="_self"><img class="home-icon" src="img/bac-icon.png"></a>
 	       <a ng-href="#" class="home-superior-a"><img class="home-icon" src="img/home-icon.png"></a>
         </div>
+        <h4 class="nutricion_h4">Nutrición Avanzada</h4>
      	<div class="producto-msg-title">
 			{{ producto.nombre }}
     	</div>
+        
         <div class="form-container">
-            <a class="button button-small button-icon icon ion-ios-information-outline" ng-click="mostrarInformacionNutricional()"> información nutricional</a>
+            <a class="button button-small button-icon icon ion-ios-information-outline" ng-click="mostrarInformacionNutricional()"> Información nutricional</a>
         </div>
     	<div class="slider-productos">
 		    <div class="detalles-imagen">
 				<img class="productos-imagen-home" src="{{ producto.imagen }}">
             </div>
 		</div>
+        <div class="invima">
+        Invima: {{ producto.invima }}
+        </div>
         <div class="form-container">
             <select ng-model="plan.numero_tomas_dia" class="select-blue" ng-change="actualizarplan()">
                 <option value="" disabled selected>Número de tomas al dia</option>
