--- a/www/templates/productos.html
+++ b/www/templates/productos.html
@@ -10,16 +10,14 @@
         Seleccione el producto que desea formular o prescribir
     </div>
     <div class="slider-productos">
-    	<slick init-onload=true dots=false arrows=true infinite=false speed=300 slides-to-show=1 touch-move=false slides-to-scroll=1 data="productos" onAfterChange="change">
+    	<slick init-onload=true dots=false arrows=true infinite=false speed=300 slides-to-show=1 touch-move=false slides-to-scroll=1 data="productos" on-after-change="onAfterChange(selection, index)">
     		<div ng-repeat="producto in productos">
     			<a href="#/productos/{{ producto.id }}"><img class="productos-imagen-home" src="{{ producto.imagen }}"></a>
-                
     		</div>
     	</slick>
+        <div>
+            <span>{{ currentIndex }}</span>
+        </div>
     </div>
-    <span class="invima">Invima: {{ producto.invima }}</span>
-    <p class="preparacion">Preparación: {{ producto.preparacion }}</span>
-    <div ng-repeat="producto in productos">
-   
     </ion-content>
 </ion-view>
