--- a/www/templates/productos.html
+++ b/www/templates/productos.html
@@ -10,14 +10,16 @@
         Seleccione el producto que desea formular o prescribir
     </div>
     <div class="slider-productos">
-    	<slick init-onload=true dots=false arrows=true infinite=false speed=300 slides-to-show=1 touch-move=false slides-to-scroll=1 data="productos" on-after-change="onAfterChange(selection, index)">
+    	<slick init-onload=true dots=false arrows=true infinite=false speed=300 slides-to-show=1 touch-move=false slides-to-scroll=1 data="productos">
     		<div ng-repeat="producto in productos">
-    			<a href="#/productos/{{ producto.id }}"><img class="productos-imagen-home" src="{{ producto.imagen }}"></a>
+    			<a ng-model="model[$index].invima" href="#/productos/{{ producto.id }}"><img class="productos-imagen-home" src="{{ producto.imagen }}"></a>
+                <div class="datos_invima">
+                <span >Invima: {{ producto.invima }}</span><br>
+                <span >Preparación: {{ producto.preparacion }}</span>
+                </div>
     		</div>
+
     	</slick>
-        <div>
-            <span>{{ currentIndex }}</span>
-        </div>
     </div>
     </ion-content>
 </ion-view>
