--- a/www/templates/productos.html
+++ b/www/templates/productos.html
@@ -15,7 +15,7 @@
     			<a ng-model="model[$index].invima" href="#/productos/{{ producto.id }}"><img class="productos-imagen-home" src="{{ producto.imagen }}"></a>
                 <div class="datos_invima">
                 <span >Invima: {{ producto.invima }}</span><br>
-                <span >Preparación: {{ producto.preparacion }}</span>
+                <p >Preparación: {{ producto.preparacion }}</p>
                 </div>
     		</div>
 
