--- a/www/templates/productos.html
+++ b/www/templates/productos.html
@@ -14,7 +14,9 @@
     		<div ng-repeat="producto in productos">
     			<a ng-model="model[$index].invima" href="#/productos/{{ producto.id }}"><img class="productos-imagen-home" src="{{ producto.imagen }}"></a>
                 <div class="datos_invima">
-                <span >Invima: {{ producto.invima }}</span><br>
+                <span style="color: #666869;">Invima: {{ producto.invima }} </span> <span style="padding-left: 17px;
+color: #ccbf04;">{{ producto.ig }}</span><br>
+
                 <p >Preparación: {{ producto.preparacion }}</p>
                 </div>
     		</div>
