cambios según ppt

--- a/www/templates/detalles.html
+++ b/www/templates/detalles.html
@@ -33,7 +33,7 @@
                 <br>
             </div>
             <select ng-model="plan.numero_meses" class="select-blue" ng-change="actualizarplan()">
-                <option value="" disabled selected>Número de meses del tratamiento</option>
+                <option value="" disabled selected>Número de meses</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
