--- a/www/templates/productos.html
+++ b/www/templates/productos.html
@@ -7,7 +7,7 @@
     </div>
     <h4 class="nutricion_h4">Nutrición Avanzada</h4>
     <div class="producto-msg-title">
-        Seleccione el producto que desea formular o prescribir
+        Seleccione el producto que desea recomendar
     </div>
     <div class="slider-productos">
     	<slick init-onload=true dots=false arrows=true infinite=false speed=300 slides-to-show=1 touch-move=false slides-to-scroll=1 data="productos">
