--- a/www/templates/plan.html
+++ b/www/templates/plan.html
@@ -19,7 +19,7 @@
 				<div class="box1"> 
 					<p>Total</p>
 					<h1>{{latas}}</h1>
-					<p>Latas del tratamiento</p>
+					<p>{{producto.id > 18 ? 'sobres' : 'latas'}} del tratamiento</p>
 				</div>
 				<div class="box2">
 				    <p>Número de tomas al dia: <strong>{{plan.numero_tomas_dia}}</strong></p>
