--- a/www/templates/plan.html
+++ b/www/templates/plan.html
@@ -27,10 +27,10 @@
 				    <p>Presentación: <strong>{{presentacion.detalle}}</strong></p>
 				</div>
 			</div>
-			<p class="eps-text">Selecccione la eps para obtener codigo de producto:</p>
+			<p class="eps-text">Selecccione la EPS para obtener código de producto:</p>
 			<select class="select-blue" ng-model="modeloeps" ng-options="disponibilidad as disponibilidad.eps for disponibilidad in presentacion.disponibilidad" ng-change="obtener()" >
             </select>
-            <p class="codigo-text"><strong>Codigo {{modeloeps.codigo}}</strong></p>
+            <p class="codigo-text"><strong>Código {{modeloeps.codigo}}</strong></p>
 		</div>
 		
 	</ion-content>
