--- a/www/templates/productos.html
+++ b/www/templates/productos.html
@@ -15,7 +15,7 @@
     			<a ng-model="model[$index].invima" href="#/productos/{{ producto.id }}"><img class="productos-imagen-home" src="{{ producto.imagen }}"></a>
                 <div class="datos_invima">
                 <h5 style="color: #666869;text-align: center;">Invima: {{ producto.invima }} </h5>
-                <p >Preparación: {{ producto.preparacion }}</p>
+                <p >Modo Preparación: {{ producto.preparacion }}</p>
                 </div>
     		</div>
     	</slick>
