--- a/www/templates/productos.html
+++ b/www/templates/productos.html
@@ -3,7 +3,7 @@
     <div class="superior-productos">
 	    <img class="home-icon-1" src="img/epd-icon.png">
          <a href="#" class="home-superior-a"><img class="home-icon" src="img/bac-icon.png"></a>
-         <a href="#" class="home-superior-a"><img class="home-icon" src="img/home-icon.png"></a>
+         
     </div>
     <h4 class="nutricion_h4">Nutrición Avanzada</h4>
     <div class="producto-msg-title">
@@ -15,7 +15,7 @@
     			<a ng-model="model[$index].invima" href="#/productos/{{ producto.id }}"><img class="productos-imagen-home" src="{{ producto.imagen }}"></a>
                 <div class="datos_invima">
                 <h5 style="color: #666869;text-align: center;">Invima: {{ producto.invima }} </h5>
-                <p >Modo Preparación: {{ producto.preparacion }}</p>
+                <p >Preparación: {{ producto.preparacion }}</p>
                 </div>
     		</div>
     	</slick>
